--- a/src/shared/modal.css
+++ b/src/shared/modal.css
@@ -16,6 +16,7 @@
 .modal > section {
   width: 90%;
   max-width: 606px;
+  height: 480px;
   margin: 0 auto;
   border-radius: 5px;
   background-color: #fff;
@@ -110,6 +111,7 @@
   background-color: white;
   position: relative;
   right: -300px;
+  top: 20px;
   width: 0;
   font-weight: 600;
   font-size: 24px;
