--- a/src/shared/App.css
+++ b/src/shared/App.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap");
+
+* {
+  font-family: "Nanum Gothic", sans-serif;
+}
+
 .App {
   text-align: center;
 }
